# pet-demo

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  LICENSE.metadata.json  README.md  RELEASE_CHECKLIST.md  vercel.json
.github/workflows/: ci-core.yml  ci-frontends.yml  ci-no-large-videos.yaml
core/: README.md  params.yaml  pyproject.toml
core/tests/backends/: test_qwen2vl_narrative.py
core/tests/pipelines/: test_async_narrative.py  test_full_pipeline.py
core/tests/stitch/: test_id_stitch.py
docs/: landing-vercel-setup.md  m4-video-asset-brief.md  playground-vercel-setup.md
frontends/: .eslintrc.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
offline_bake/: _fakes.py  _pose_skeleton.py  apply_stitch.py  artifact_schema.py  bake_from_yaml.py  bake_m4.py  chapter_narratives.py  curated_clips.yaml  generate_overlays.py  m4_curated_clips.yaml  pyproject.toml  rebuild_narratives.py  render_overlay_from_bundle.py  run_benchmarks.py  sample_narratives.py  serializers.py
offline_bake/tests/: conftest.py  test_apply_stitch.py  test_artifact_schema.py  test_artifact_schema_m4.py  test_artifact_schema_reids.py  test_bake_from_yaml.py  test_bake_m4.py  test_chapter_narratives.py  test_generate_overlays.py  test_pose_skeleton.py  test_run_benchmarks.py  test_sample_narratives.py  test_serialize_reids.py  test_serializers.py
scripts/: bake-artifacts.sh  bake-m4-artifacts.sh  build-offline-bundle.sh  check-video-size.sh  fetch-artifacts.sh
tests/fixtures/: artifact-golden.json
videos/: stitch-plan.json
(+181 files in other folders)
